--- a/NGINX/dockerfile
+++ b/NGINX/dockerfile
@@ -1,7 +1,10 @@
-FROM debian:latest
+FROM nginx:latest
 
-RUN	apt-get update && apt-get upgrade 
-RUN	apt-get install -y nginx
+RUN	apt-get update && apt-get upgrade -y
+# RUN	apt-get install -y nginx
 
-# COPY nginx.conf /etc/nginx/nginx.conf
-CMD ["bash"]
+COPY index.html /usr/share/nginx/html
+
+EXPOSE 8080
+
+CMD ["nginx", "-g", "daemon off;"]
