--- a/test/dockerfile
+++ b/test/dockerfile
@@ -1,25 +1,13 @@
-FROM debian:latest
+FROM   debian:latest
 
-RUN    apt-get update && apt-get upgrade -y \
-       apt-utils \
-       net-tools \
-       iputils-ping \
-       telnet \
-       nano \
-       bash 
+RUN    apt-get update && apt-get upgrade -y
 
 RUN    apt-get install -y nginx
-RUN     /etc/init.d/nginx start \
-        /etc/init.d/nginx enable
 
-COPY ./conf/nginx.conf /etc/nginx
-COPY index.html /usr/share/nginx/html
+COPY   ./index.html /usr/share/nginx/html
 
-RUN  /etc/init.d/nginx restart
+COPY   ./conf/nginx.conf /etc/nginx/conf.d/default.conf
 
+EXPOSE  8080
 
-
-EXPOSE 8080
-
-# CMD ["/bin/bash"]
-CMD ["nginx", "-g", "daemon off;"]
+CMD    ["nginx", "-g", "daemon off;"]
