--- a/NGINX/dockerfile
+++ b/NGINX/dockerfile
@@ -1,10 +1,13 @@
-FROM nginx:latest
+FROM   debian:latest
 
-RUN	apt-get update && apt-get upgrade -y
-# RUN	apt-get install -y nginx
+RUN    apt-get update && apt-get upgrade -y
 
-COPY index.html /usr/share/nginx/html
+RUN    apt-get install -y nginx
 
-EXPOSE 8080
+COPY   ./index.html /usr/share/nginx/html
 
-CMD ["nginx", "-g", "daemon off;"]
+COPY   ./conf/nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE  8080
+
+CMD    ["nginx", "-g", "daemon off;"]
