--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,9 @@ services:
       - "8080:8080"
     volumes:
       - ./test:/usr/share/nginx/html
+
+  db:
+    build: ./mariaDB
+    container_name: db
+    ports:
+      - "3306:3306"
