--- a/NGINX/dockerfile
+++ b/NGINX/dockerfile
@@ -2,7 +2,12 @@ FROM   debian:latest
 
 RUN    apt-get update && apt-get upgrade -y
 
-RUN    apt-get install -y nginx
+RUN    apt-get install -y nginx \
+                openssl
+
+RUN    mkdir /etc/nginx/ssl
+
+RUN    openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt -subj "/C=UE/ST=AD/L=AD/O=42 School/OU=isaad/CN=isaad/"
 
 COPY   ./index.html /usr/share/nginx/html
 
