--- a/NGINX/conf/nginx.conf
+++ b/NGINX/conf/nginx.conf
@@ -45,3 +45,15 @@ server {
     #    deny  all;
     #}
 }
+
+server {
+    listen 8080;
+    server_name cira.com;
+
+    location / {
+        proxy_pass http://wordpress:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
