--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,5 +1,7 @@
+# Base image
 FROM debian:buster
 
+# Install packages
 RUN apt-get update && apt-get install -y \
 	wget \
 	curl \
@@ -15,13 +17,36 @@ RUN apt-get update && apt-get install -y \
 	php-redis \
 	&& rm -rf /var/lib/apt/lists/*
 
-RUN wget https://wordpress.org/latest.tar.gz -P /tmp && \
-    tar xzf /tmp/latest.tar.gz -C /tmp && \
-    rm /tmp/latest.tar.gz && \
+# Download and extract WordPress
+RUN wget -q https://wordpress.org/latest.tar.gz && \
+    tar -xzf latest.tar.gz && \
+    rm latest.tar.gz && \
     mkdir -p /var/www/html && \
-    mv /tmp/wordpress/* /var/www/html && \
-    rm -rf /tmp/wordpress
+    mv wordpress /var/www/html/
 
+# Download and install wp-cli
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+    chmod +x wp-cli.phar && \
+    mv wp-cli.phar /usr/local/bin/wp
 
+# secure php
+RUN sed -i "s/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/" /etc/php/7.3/fpm/php.ini
 
-ENTRYPOINT [ "sleep", "infinity" ]
+# create the PID file
+RUN mkdir -p /run/php
+
+# Copy configuration files
+COPY ./config/www.conf /etc/php/7.3/fpm/pool.d
+
+# make php config file
+COPY ./config/wp-config.php /var/www/html/wp-config.php
+
+# Set ownership and permissions for /var/www/html directory
+RUN chown -R www-data:www-data /var/www/html && \
+    chmod -R 755 /var/www/html
+
+# Expose the default PHP-FPM port
+EXPOSE 3000
+
+ENTRYPOINT [ "bash", "-c" ]
+CMD [ "php-fpm7.3" ]
