--- a/NGINX/dockerfile
+++ b/NGINX/dockerfile
@@ -11,7 +11,7 @@ RUN    openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ss
 
 COPY   ./index.html /usr/share/nginx/html
 
-COPY   ./conf/nginx.conf /etc/nginx/conf.d/default.conf
+COPY   ./conf/nginx.conf /etc/nginx/conf.d
 
 EXPOSE  8080
 
