--- a/NGINX/conf/nginx.conf
+++ b/NGINX/conf/nginx.conf
@@ -1,54 +1,54 @@
-server {
+# server {
    
-    listen       80;
-    listen       8080;
-    server_name  localhost;
-    #server_name ahsalem.42.fr;
+#     listen       80;
+#     listen       8080;
+#     server_name  localhost;
+#     #server_name ahsalem.42.fr;
 
-    ssl_protocols TLSV1.3;
-#     access_log  /var/log/nginx/host.access.log  main;
-    root   /usr/share/nginx/html;
-    index index.html;
+#     ssl_protocols TLSV1.3;
+# #     access_log  /var/log/nginx/host.access.log  main;
+#     root   /usr/share/nginx/html;
+#     index index.html;
 
-    # location / {
-    #   proxy_pass http://wordpress:9000;
+#     # location / {
+#     #   proxy_pass http://wordpress:9000;
 
-    # }
+#     # }
   
-    #error_page  404              /404.html;
+#     #error_page  404              /404.html;
 
-    # redirect server error pages to the static page /50x.html
-    #
-    # error_page   500 502 503 504  /50x.html;
+#     # redirect server error pages to the static page /50x.html
+#     #
+#     # error_page   500 502 503 504  /50x.html;
     
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
+#     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+#     #
+#     #location ~ \.php$ {
+#     #    proxy_pass   http://127.0.0.1;
+#     #}
 
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
+#     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+#     #
+#     #location ~ \.php$ {
+#     #    root           html;
+#     #    fastcgi_pass   127.0.0.1:9000;
+#     #    fastcgi_index  index.php;
+#     #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+#     #    include        fastcgi_params;
+#     #}
 
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
-}
+#     # deny access to .htaccess files, if Apache's document root
+#     # concurs with nginx's one
+#     #
+#     #location ~ /\.ht {
+#     #    deny  all;
+#     #}
+# }
 
 server {
-    listen 8080;
-    server_name cira.com;
+    listen 3000;
+    server_name localhost;
 
     location / {
         proxy_pass http://wordpress:3000;
