--- a/NGINX/conf/nginx.conf
+++ b/NGINX/conf/nginx.conf
@@ -47,13 +47,27 @@
 # }
 
 server {
-    listen 3000;
-    server_name localhost;
+    listen 443 ssl;
+    server_name isaad.42.fr;
+    root /var/www/html/wordpress;
+
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    ssl_protocols TLSV1.3 TLSV1.2;
+
+    index index.php index.html index.htm;
 
     location / {
-        proxy_pass http://wordpress:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        try_files $uri $uri/ =404;
+    }
+
+    location /.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
