--- a/mariaDB/Dockerfile
+++ b/mariaDB/Dockerfile
@@ -4,8 +4,14 @@ RUN    apt update && apt upgrade -y
 
 RUN    apt install -y mariadb-server
 
-RUN    mysql_secure_installation
+COPY   ./config/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
+COPY ./config/mydata.sql /docker-entrypoint-initdb.d/
 
+COPY ./tools/start-mariadb.sh /usr/local/bin/start-mariadb.sh
 
-CMD ["sh", "config.sh"]
+RUN chmod +x /usr/local/bin/start-mariadb.sh
+
+EXPOSE 3306
+
+CMD [ "mysqld_safe" ]
