I forgot what did I do

--- a/mariaDB/Dockerfile
+++ b/mariaDB/Dockerfile
@@ -1,16 +1,21 @@
 FROM debian:buster
 
+ARG    SQL_DB_NAME
+ARG    SQL_USERNAME
+ARG    SQL_PASSWORD
+ARG    SQL_ROOT_PASSWORD
+ARG    SQL_HOST
+
 RUN    apt update && apt upgrade -y
 
 RUN    apt install -y mariadb-server
 
 COPY   ./config/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
-COPY ./config/mydata.sql /docker-entrypoint-initdb.d/
+COPY ./config/sql-setup.sh /tmp
+RUN chmod +x /tmp/sql-setup.sh
 
-COPY ./tools/start-mariadb.sh /usr/local/bin/start-mariadb.sh
-
-RUN chmod +x /usr/local/bin/start-mariadb.sh
+RUN service mysql start && /tmp/sql-setup.sh
 
 EXPOSE 3306
 
