--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.9'
 services:
   engine-x:
     build: ./nginx
@@ -6,30 +7,49 @@ services:
       - "443:443"
     depends_on:
       - wordpress
-    volumes:
-      - ./nginx:/usr/share/nginx/html
     networks:
       - my-network
+    volumes:
+      - wordpress_data:/var/www/html
+    restart: on-failure
 
   wordpress:
     build: ./wordpress
-    container_name: wordpress
     ports:
-      - "3000:3000"
-    networks:
-      - my-network
-
-  db:
-    build: ./mariaDB
+      - "9000:9000"
     env_file:
       - .env
+    container_name: mywordpress
+    networks:
+      - my-network
+    depends_on:
+      - db
+    volumes:
+      - wordpress_data:/var/www/html
+    restart: on-failure
+
+  db:
     container_name: db
     ports:
       - "3306:3306"
+    build:
+      context: ./mariaDB
+      args:
+        SQL_DB_NAME: ${SQL_DB_NAME}
+        SQL_USERNAME: ${SQL_USERNAME}
+        SQL_PASSWORD: ${SQL_PASSWORD}
+        SQL_ROOT_PASSWORD: ${SQL_ROOT_PASSWORD}
+        SQL_HOST: ${SQL_HOST}
     networks:
       - my-network
+    volumes:
+      - db_data:/var/lib/mysql
+    restart: on-failure
 
+networks:
+  my-network:
+    name: docker-network
 
-  networks:
-    my-network:
-      name: docker-network
+volumes:
+  wordpress_data:
+  db_data:
