--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -4,6 +4,7 @@ FROM debian:buster
 # Install packages
 RUN apt-get update && apt-get install -y \
 	wget \
+	vim \
 	curl \
 	bash \
 	sudo \
@@ -17,7 +18,8 @@ RUN wget -q https://wordpress.org/latest.tar.gz && \
     tar -xzf latest.tar.gz && \
     rm latest.tar.gz && \
     mkdir -p /var/www/html && \
-    mv wordpress /var/www/html/
+    mv wordpress/* /var/www/html/ && \
+	rm -rf /wordpress
 
 # Download and install wp-cli
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
@@ -34,13 +36,20 @@ RUN mkdir -p /run/php
 COPY ./config/www.conf /etc/php/7.3/fpm/pool.d
 
 # make php config file
-COPY ./config/wp-config.php /var/www/html/wp-config.php
+RUN cp /var/www/html/wp-config-sample.php /var/www/html/wp-config.php
 
 # Set ownership and permissions for /var/www/html directory
-RUN chown -R www-data:www-data /var/www/html && \
-    chmod -R 755 /var/www/html
+RUN chmod -R 755 /var/www/html && \
+	chown -R www-data:www-data /var/www/html
+
+
+WORKDIR /var/www/html
 
 # Expose the default PHP-FPM port
 EXPOSE 9000
 
-CMD [ "php-fpm7.3", "--nodaemonize" ]
+COPY test.sh /tmp
+RUN chmod +x /tmp/test.sh
+
+ENTRYPOINT [ "bash", "-c" ]
+CMD [ "/tmp/test.sh && php-fpm7.3 -F --nodaemonize" ]
