--- a/NGINX/conf/nginx.conf
+++ b/NGINX/conf/nginx.conf
@@ -47,28 +47,25 @@
 # }
 
 server {
-    listen 443 ssl;
-    listen 9000;
-    server_name isaad.42.fr;
-    root /var/www/html/wordpress;
-
+    listen       443 ssl;
+    server_name  isaad.42.fr;
+    ssl_protocols TLSv1.2 TLSv1.3;
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
-    ssl_protocols TLSV1.3 TLSV1.2;
-
-    index index.php index.html index.htm;
-
-    location / {
-        try_files $uri $uri/ =404;
-    }
-
-    location /.php$ {
-        try_files $uri =404;
+    root   /var/www/html;
+    index  index.php index.html index.htm;
+    #
+    # location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    # }
+    location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass wordpress:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+       fastcgi_pass   mywordpress:9000;
+       fastcgi_index  index.php;
+       fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+       include        fastcgi_params;
+    }
+    location / {
+        try_files $uri $uri/ = 404;
     }
 }
