--- a/NGINX/dockerfile
+++ b/NGINX/dockerfile
@@ -10,7 +10,7 @@ RUN    mkdir /etc/nginx/ssl
 
 RUN    openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt -subj "/C=UE/ST=AD/L=AD/O=42 School/OU=isaad/CN=isaad/"
 
-COPY   ./index.html /usr/share/nginx/html
+COPY   ./tools/index.html /usr/share/nginx/html
 
 COPY   ./conf/nginx.conf /etc/nginx/conf.d
 
