--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,30 @@
-WORDPRESS_DB_NAME=
-WORDPRESS_DB_USER=
-WORDPRESS_DB_PASSWORD=
-WORDPRESS_DB_HOST=
+WORDPRESS_DB_NAME=wordpress
+WORDPRESS_DB_USER=myuser
+WORDPRESS_DB_PASSWORD=mypassword
+WORDPRESS_DB_HOST=mariadb:3306
+
+SQL_DB_NAME=wordpress
+SQL_USERNAME=myuser
+SQL_PASSWORD=mypassword
+SQL_HOST=localhost
+SQL_ROOT_PASSWORD=myrootpassword
+
+WP_USER_NAME=myuser
+WP_USER_EMAIL=myemail
+WP_USER_PASS=mypassword
+DOMAIN_NAME=localhost
+WP_TITLE=mytitle
+WP_ADMIN_NAME=myadmin
+WP_ADMIN_PASS=mypassword
+WP_ADMIN_EMAIL=myemail
+
+
+WEBSITE_URI=https://isaad.42.fr
+TITLE=isaad
+
+WORDPRESS_ADMIN=isaad
+WORDPRESS_ADMIN_PASSWORD=mypassword
+WORDPRESS_ADMIN_EMAIL=code.isaad@gmail.com
+WORDPRESS_USER=imad
+WORDPRESS_USER_PASSWORD=mypassword
+WORDPRESS_USER_EMAIL=code.isaad@gmail.com
