--- a/NGINX/conf/nginx.conf
+++ b/NGINX/conf/nginx.conf
@@ -60,7 +60,7 @@ server {
     # }
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-       fastcgi_pass   mywordpress:9000;
+       fastcgi_pass   wordpress:9000;
        fastcgi_index  index.php;
        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
        include        fastcgi_params;
