--- a/wordpress/conf/www.conf
+++ b/wordpress/conf/www.conf
@@ -3,7 +3,7 @@
 user = www-data
 group = www-data
 
-listen = mywordpress:9000
+listen = wordpress:9000
 listen.owner = www-data
 listen.group = www-data
 
